--- a/src/components/layoutComponents/TodoDetails/tododetails.module.scss
+++ b/src/components/layoutComponents/TodoDetails/tododetails.module.scss
@@ -3,6 +3,7 @@
 /* -------------------------------------------- */
 
 .todo_details_wrapper {
+  background-color: $background-color;
   position: relative;
   width: 100%;
   height: 100vh;
